// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ArcanumCard — snapshot per card > snapshot of arcanum 0 (The Fool) 1`] = `
<svg
  aria-label="Arcanum 0, The Fool — Hebrew letter Aleph, attribution Air"
  data-arcanum="0"
  role="figure"
  viewBox="0 0 200 320"
  xmlns="http://www.w3.org/2000/svg"
>
  <title>
    Arcanum 0, The Fool — Hebrew letter Aleph, attribution Air
  </title>
  <defs>
    <lineargradient
      id="arcanum-bg-:r60:"
      x1="0"
      x2="0"
      y1="0"
      y2="1"
    >
      <stop
        offset="0%"
        stop-color="#1a1542"
      />
      <stop
        offset="100%"
        stop-color="#0e0a1f"
      />
    </lineargradient>
    <filter
      color-interpolation-filters="sRGB"
      height="1"
      id="arcanum-filt-:r61:"
      width="1"
      x="0"
      y="0"
    >
      <fecolormatrix
        result="desat"
        type="saturate"
        values="0.2"
      />
      <fecomponenttransfer
        in="desat"
      >
        <fefuncr
          slope="0.5"
          type="linear"
        />
        <fefuncg
          slope="0.48"
          type="linear"
        />
        <fefuncb
          slope="0.62"
          type="linear"
        />
      </fecomponenttransfer>
    </filter>
    <clippath
      id="arcanum-clip-:r62:"
    >
      <rect
        height="142"
        width="180"
        x="10"
        y="88"
      />
    </clippath>
    <radialgradient
      cx="50%"
      cy="50%"
      id="arcanum-glow-:r63:"
      r="50%"
    >
      <stop
        offset="0%"
        stop-color="#d4af37"
        stop-opacity="0.22"
      />
      <stop
        offset="100%"
        stop-color="#d4af37"
        stop-opacity="0"
      />
    </radialgradient>
  </defs>
  <rect
    fill="url(#arcanum-bg-:r60:)"
    height="318"
    rx="10"
    ry="10"
    stroke="#d4af37"
    stroke-opacity="0.7"
    stroke-width="1.5"
    width="198"
    x="1"
    y="1"
  />
  <g
    data-zone="letter"
  >
    <ellipse
      cx="100"
      cy="48"
      fill="url(#arcanum-glow-:r63:)"
      rx="56"
      ry="44"
    />
    <text
      fill="#f8f8ff"
      font-family="var(--font-hebrew), serif"
      font-size="64"
      lang="he"
      style="direction: rtl; unicode-bidi: isolate;"
      text-anchor="middle"
      x="100"
      y="70"
    >
      א
    </text>
  </g>
  <line
    stroke="#d4af37"
    stroke-opacity="0.4"
    stroke-width="0.8"
    x1="20"
    x2="180"
    y1="88"
    y2="88"
  />
  <image
    clip-path="url(#arcanum-clip-:r62:)"
    filter="url(#arcanum-filt-:r61:)"
    height="313"
    href="/rider-waite-cards/TheFool.jpg"
    preserveAspectRatio="xMidYMin slice"
    width="180"
    x="10"
    y="78"
  />
  <rect
    clip-path="url(#arcanum-clip-:r62:)"
    fill="#d4af37"
    fill-opacity="0.12"
    height="142"
    style="mix-blend-mode: screen;"
    width="180"
    x="10"
    y="88"
  />
  <line
    stroke="#d4af37"
    stroke-opacity="0.4"
    stroke-width="0.8"
    x1="20"
    x2="180"
    y1="230"
    y2="230"
  />
  <g
    data-zone="footer"
  >
    <text
      fill="#f8f8ff"
      font-family="var(--font-display), serif"
      font-size="15"
      letter-spacing="1.5"
      style="text-transform: uppercase;"
      text-anchor="middle"
      x="100"
      y="262"
    >
      The Fool
    </text>
    <text
      fill="#f8f8ff"
      fill-opacity="0.5"
      font-family="var(--font-sans), sans-serif"
      font-size="9"
      letter-spacing="1.5"
      style="text-transform: uppercase;"
      text-anchor="middle"
      x="100"
      y="284"
    >
      Air
    </text>
  </g>
  <rect
    fill="#d4af37"
    height="3"
    rx="1.5"
    width="160"
    x="20"
    y="306"
  />
</svg>
`;

exports[`ArcanumCard — snapshot per card > snapshot of arcanum 1 (The Magician) 1`] = `
<svg
  aria-label="Arcanum 1, The Magician — Hebrew letter Beth, attribution Mercury"
  data-arcanum="1"
  role="figure"
  viewBox="0 0 200 320"
  xmlns="http://www.w3.org/2000/svg"
>
  <title>
    Arcanum 1, The Magician — Hebrew letter Beth, attribution Mercury
  </title>
  <defs>
    <lineargradient
      id="arcanum-bg-:r64:"
      x1="0"
      x2="0"
      y1="0"
      y2="1"
    >
      <stop
        offset="0%"
        stop-color="#1a1542"
      />
      <stop
        offset="100%"
        stop-color="#0e0a1f"
      />
    </lineargradient>
    <filter
      color-interpolation-filters="sRGB"
      height="1"
      id="arcanum-filt-:r65:"
      width="1"
      x="0"
      y="0"
    >
      <fecolormatrix
        result="desat"
        type="saturate"
        values="0.2"
      />
      <fecomponenttransfer
        in="desat"
      >
        <fefuncr
          slope="0.5"
          type="linear"
        />
        <fefuncg
          slope="0.48"
          type="linear"
        />
        <fefuncb
          slope="0.62"
          type="linear"
        />
      </fecomponenttransfer>
    </filter>
    <clippath
      id="arcanum-clip-:r66:"
    >
      <rect
        height="142"
        width="180"
        x="10"
        y="88"
      />
    </clippath>
    <radialgradient
      cx="50%"
      cy="50%"
      id="arcanum-glow-:r67:"
      r="50%"
    >
      <stop
        offset="0%"
        stop-color="#e07b00"
        stop-opacity="0.22"
      />
      <stop
        offset="100%"
        stop-color="#e07b00"
        stop-opacity="0"
      />
    </radialgradient>
  </defs>
  <rect
    fill="url(#arcanum-bg-:r64:)"
    height="318"
    rx="10"
    ry="10"
    stroke="#e07b00"
    stroke-opacity="0.7"
    stroke-width="1.5"
    width="198"
    x="1"
    y="1"
  />
  <g
    data-zone="letter"
  >
    <ellipse
      cx="100"
      cy="48"
      fill="url(#arcanum-glow-:r67:)"
      rx="56"
      ry="44"
    />
    <text
      fill="#f8f8ff"
      font-family="var(--font-hebrew), serif"
      font-size="64"
      lang="he"
      style="direction: rtl; unicode-bidi: isolate;"
      text-anchor="middle"
      x="100"
      y="70"
    >
      ב
    </text>
  </g>
  <line
    stroke="#e07b00"
    stroke-opacity="0.4"
    stroke-width="0.8"
    x1="20"
    x2="180"
    y1="88"
    y2="88"
  />
  <image
    clip-path="url(#arcanum-clip-:r66:)"
    filter="url(#arcanum-filt-:r65:)"
    height="313"
    href="/rider-waite-cards/TheMagician.jpg"
    preserveAspectRatio="xMidYMin slice"
    width="180"
    x="10"
    y="78"
  />
  <rect
    clip-path="url(#arcanum-clip-:r66:)"
    fill="#e07b00"
    fill-opacity="0.12"
    height="142"
    style="mix-blend-mode: screen;"
    width="180"
    x="10"
    y="88"
  />
  <line
    stroke="#e07b00"
    stroke-opacity="0.4"
    stroke-width="0.8"
    x1="20"
    x2="180"
    y1="230"
    y2="230"
  />
  <g
    data-zone="footer"
  >
    <text
      fill="#f8f8ff"
      font-family="var(--font-display), serif"
      font-size="15"
      letter-spacing="1.5"
      style="text-transform: uppercase;"
      text-anchor="middle"
      x="100"
      y="262"
    >
      The Magician
    </text>
    <text
      fill="#f8f8ff"
      fill-opacity="0.5"
      font-family="var(--font-sans), sans-serif"
      font-size="9"
      letter-spacing="1.5"
      style="text-transform: uppercase;"
      text-anchor="middle"
      x="100"
      y="284"
    >
      Mercury
    </text>
  </g>
  <rect
    fill="#e07b00"
    height="3"
    rx="1.5"
    width="160"
    x="20"
    y="306"
  />
</svg>
`;

exports[`ArcanumCard — snapshot per card > snapshot of arcanum 2 (The High Priestess) 1`] = `
<svg
  aria-label="Arcanum 2, The High Priestess — Hebrew letter Gimel, attribution Moon"
  data-arcanum="2"
  role="figure"
  viewBox="0 0 200 320"
  xmlns="http://www.w3.org/2000/svg"
>
  <title>
    Arcanum 2, The High Priestess — Hebrew letter Gimel, attribution Moon
  </title>
  <defs>
    <lineargradient
      id="arcanum-bg-:r68:"
      x1="0"
      x2="0"
      y1="0"
      y2="1"
    >
      <stop
        offset="0%"
        stop-color="#1a1542"
      />
      <stop
        offset="100%"
        stop-color="#0e0a1f"
      />
    </lineargradient>
    <filter
      color-interpolation-filters="sRGB"
      height="1"
      id="arcanum-filt-:r69:"
      width="1"
      x="0"
      y="0"
    >
      <fecolormatrix
        result="desat"
        type="saturate"
        values="0.2"
      />
      <fecomponenttransfer
        in="desat"
      >
        <fefuncr
          slope="0.5"
          type="linear"
        />
        <fefuncg
          slope="0.48"
          type="linear"
        />
        <fefuncb
          slope="0.62"
          type="linear"
        />
      </fecomponenttransfer>
    </filter>
    <clippath
      id="arcanum-clip-:r6a:"
    >
      <rect
        height="142"
        width="180"
        x="10"
        y="88"
      />
    </clippath>
    <radialgradient
      cx="50%"
      cy="50%"
      id="arcanum-glow-:r6b:"
      r="50%"
    >
      <stop
        offset="0%"
        stop-color="#9b88c4"
        stop-opacity="0.22"
      />
      <stop
        offset="100%"
        stop-color="#9b88c4"
        stop-opacity="0"
      />
    </radialgradient>
  </defs>
  <rect
    fill="url(#arcanum-bg-:r68:)"
    height="318"
    rx="10"
    ry="10"
    stroke="#9b88c4"
    stroke-opacity="0.7"
    stroke-width="1.5"
    width="198"
    x="1"
    y="1"
  />
  <g
    data-zone="letter"
  >
    <ellipse
      cx="100"
      cy="48"
      fill="url(#arcanum-glow-:r6b:)"
      rx="56"
      ry="44"
    />
    <text
      fill="#f8f8ff"
      font-family="var(--font-hebrew), serif"
      font-size="64"
      lang="he"
      style="direction: rtl; unicode-bidi: isolate;"
      text-anchor="middle"
      x="100"
      y="70"
    >
      ג
    </text>
  </g>
  <line
    stroke="#9b88c4"
    stroke-opacity="0.4"
    stroke-width="0.8"
    x1="20"
    x2="180"
    y1="88"
    y2="88"
  />
  <image
    clip-path="url(#arcanum-clip-:r6a:)"
    filter="url(#arcanum-filt-:r69:)"
    height="313"
    href="/rider-waite-cards/TheHighPriestess.jpg"
    preserveAspectRatio="xMidYMin slice"
    width="180"
    x="10"
    y="78"
  />
  <rect
    clip-path="url(#arcanum-clip-:r6a:)"
    fill="#9b88c4"
    fill-opacity="0.12"
    height="142"
    style="mix-blend-mode: screen;"
    width="180"
    x="10"
    y="88"
  />
  <line
    stroke="#9b88c4"
    stroke-opacity="0.4"
    stroke-width="0.8"
    x1="20"
    x2="180"
    y1="230"
    y2="230"
  />
  <g
    data-zone="footer"
  >
    <text
      fill="#f8f8ff"
      font-family="var(--font-display), serif"
      font-size="15"
      letter-spacing="1.5"
      style="text-transform: uppercase;"
      text-anchor="middle"
      x="100"
      y="262"
    >
      The High Priestess
    </text>
    <text
      fill="#f8f8ff"
      fill-opacity="0.5"
      font-family="var(--font-sans), sans-serif"
      font-size="9"
      letter-spacing="1.5"
      style="text-transform: uppercase;"
      text-anchor="middle"
      x="100"
      y="284"
    >
      Moon
    </text>
  </g>
  <rect
    fill="#9b88c4"
    height="3"
    rx="1.5"
    width="160"
    x="20"
    y="306"
  />
</svg>
`;

exports[`ArcanumCard — snapshot per card > snapshot of arcanum 3 (The Empress) 1`] = `
<svg
  aria-label="Arcanum 3, The Empress — Hebrew letter Daleth, attribution Venus"
  data-arcanum="3"
  role="figure"
  viewBox="0 0 200 320"
  xmlns="http://www.w3.org/2000/svg"
>
  <title>
    Arcanum 3, The Empress — Hebrew letter Daleth, attribution Venus
  </title>
  <defs>
    <lineargradient
      id="arcanum-bg-:r6c:"
      x1="0"
      x2="0"
      y1="0"
      y2="1"
    >
      <stop
        offset="0%"
        stop-color="#1a1542"
      />
      <stop
        offset="100%"
        stop-color="#0e0a1f"
      />
    </lineargradient>
    <filter
      color-interpolation-filters="sRGB"
      height="1"
      id="arcanum-filt-:r6d:"
      width="1"
      x="0"
      y="0"
    >
      <fecolormatrix
        result="desat"
        type="saturate"
        values="0.2"
      />
      <fecomponenttransfer
        in="desat"
      >
        <fefuncr
          slope="0.5"
          type="linear"
        />
        <fefuncg
          slope="0.48"
          type="linear"
        />
        <fefuncb
          slope="0.62"
          type="linear"
        />
      </fecomponenttransfer>
    </filter>
    <clippath
      id="arcanum-clip-:r6e:"
    >
      <rect
        height="142"
        width="180"
        x="10"
        y="88"
      />
    </clippath>
    <radialgradient
      cx="50%"
      cy="50%"
      id="arcanum-glow-:r6f:"
      r="50%"
    >
      <stop
        offset="0%"
        stop-color="#3a8f4a"
        stop-opacity="0.22"
      />
      <stop
        offset="100%"
        stop-color="#3a8f4a"
        stop-opacity="0"
      />
    </radialgradient>
  </defs>
  <rect
    fill="url(#arcanum-bg-:r6c:)"
    height="318"
    rx="10"
    ry="10"
    stroke="#3a8f4a"
    stroke-opacity="0.7"
    stroke-width="1.5"
    width="198"
    x="1"
    y="1"
  />
  <g
    data-zone="letter"
  >
    <ellipse
      cx="100"
      cy="48"
      fill="url(#arcanum-glow-:r6f:)"
      rx="56"
      ry="44"
    />
    <text
      fill="#f8f8ff"
      font-family="var(--font-hebrew), serif"
      font-size="64"
      lang="he"
      style="direction: rtl; unicode-bidi: isolate;"
      text-anchor="middle"
      x="100"
      y="70"
    >
      ד
    </text>
  </g>
  <line
    stroke="#3a8f4a"
    stroke-opacity="0.4"
    stroke-width="0.8"
    x1="20"
    x2="180"
    y1="88"
    y2="88"
  />
  <image
    clip-path="url(#arcanum-clip-:r6e:)"
    filter="url(#arcanum-filt-:r6d:)"
    height="313"
    href="/rider-waite-cards/TheEmpress.jpg"
    preserveAspectRatio="xMidYMin slice"
    width="180"
    x="10"
    y="78"
  />
  <rect
    clip-path="url(#arcanum-clip-:r6e:)"
    fill="#3a8f4a"
    fill-opacity="0.12"
    height="142"
    style="mix-blend-mode: screen;"
    width="180"
    x="10"
    y="88"
  />
  <line
    stroke="#3a8f4a"
    stroke-opacity="0.4"
    stroke-width="0.8"
    x1="20"
    x2="180"
    y1="230"
    y2="230"
  />
  <g
    data-zone="footer"
  >
    <text
      fill="#f8f8ff"
      font-family="var(--font-display), serif"
      font-size="15"
      letter-spacing="1.5"
      style="text-transform: uppercase;"
      text-anchor="middle"
      x="100"
      y="262"
    >
      The Empress
    </text>
    <text
      fill="#f8f8ff"
      fill-opacity="0.5"
      font-family="var(--font-sans), sans-serif"
      font-size="9"
      letter-spacing="1.5"
      style="text-transform: uppercase;"
      text-anchor="middle"
      x="100"
      y="284"
    >
      Venus
    </text>
  </g>
  <rect
    fill="#3a8f4a"
    height="3"
    rx="1.5"
    width="160"
    x="20"
    y="306"
  />
</svg>
`;

exports[`ArcanumCard — snapshot per card > snapshot of arcanum 4 (The Emperor) 1`] = `
<svg
  aria-label="Arcanum 4, The Emperor — Hebrew letter He, attribution Aries"
  data-arcanum="4"
  role="figure"
  viewBox="0 0 200 320"
  xmlns="http://www.w3.org/2000/svg"
>
  <title>
    Arcanum 4, The Emperor — Hebrew letter He, attribution Aries
  </title>
  <defs>
    <lineargradient
      id="arcanum-bg-:r6g:"
      x1="0"
      x2="0"
      y1="0"
      y2="1"
    >
      <stop
        offset="0%"
        stop-color="#1a1542"
      />
      <stop
        offset="100%"
        stop-color="#0e0a1f"
      />
    </lineargradient>
    <filter
      color-interpolation-filters="sRGB"
      height="1"
      id="arcanum-filt-:r6h:"
      width="1"
      x="0"
      y="0"
    >
      <fecolormatrix
        result="desat"
        type="saturate"
        values="0.2"
      />
      <fecomponenttransfer
        in="desat"
      >
        <fefuncr
          slope="0.5"
          type="linear"
        />
        <fefuncg
          slope="0.48"
          type="linear"
        />
        <fefuncb
          slope="0.62"
          type="linear"
        />
      </fecomponenttransfer>
    </filter>
    <clippath
      id="arcanum-clip-:r6i:"
    >
      <rect
        height="142"
        width="180"
        x="10"
        y="88"
      />
    </clippath>
    <radialgradient
      cx="50%"
      cy="50%"
      id="arcanum-glow-:r6j:"
      r="50%"
    >
      <stop
        offset="0%"
        stop-color="#c0392b"
        stop-opacity="0.22"
      />
      <stop
        offset="100%"
        stop-color="#c0392b"
        stop-opacity="0"
      />
    </radialgradient>
  </defs>
  <rect
    fill="url(#arcanum-bg-:r6g:)"
    height="318"
    rx="10"
    ry="10"
    stroke="#c0392b"
    stroke-opacity="0.7"
    stroke-width="1.5"
    width="198"
    x="1"
    y="1"
  />
  <g
    data-zone="letter"
  >
    <ellipse
      cx="100"
      cy="48"
      fill="url(#arcanum-glow-:r6j:)"
      rx="56"
      ry="44"
    />
    <text
      fill="#f8f8ff"
      font-family="var(--font-hebrew), serif"
      font-size="64"
      lang="he"
      style="direction: rtl; unicode-bidi: isolate;"
      text-anchor="middle"
      x="100"
      y="70"
    >
      ה
    </text>
  </g>
  <line
    stroke="#c0392b"
    stroke-opacity="0.4"
    stroke-width="0.8"
    x1="20"
    x2="180"
    y1="88"
    y2="88"
  />
  <image
    clip-path="url(#arcanum-clip-:r6i:)"
    filter="url(#arcanum-filt-:r6h:)"
    height="313"
    href="/rider-waite-cards/TheEmperor.jpg"
    preserveAspectRatio="xMidYMin slice"
    width="180"
    x="10"
    y="78"
  />
  <rect
    clip-path="url(#arcanum-clip-:r6i:)"
    fill="#c0392b"
    fill-opacity="0.12"
    height="142"
    style="mix-blend-mode: screen;"
    width="180"
    x="10"
    y="88"
  />
  <line
    stroke="#c0392b"
    stroke-opacity="0.4"
    stroke-width="0.8"
    x1="20"
    x2="180"
    y1="230"
    y2="230"
  />
  <g
    data-zone="footer"
  >
    <text
      fill="#f8f8ff"
      font-family="var(--font-display), serif"
      font-size="15"
      letter-spacing="1.5"
      style="text-transform: uppercase;"
      text-anchor="middle"
      x="100"
      y="262"
    >
      The Emperor
    </text>
    <text
      fill="#f8f8ff"
      fill-opacity="0.5"
      font-family="var(--font-sans), sans-serif"
      font-size="9"
      letter-spacing="1.5"
      style="text-transform: uppercase;"
      text-anchor="middle"
      x="100"
      y="284"
    >
      Aries
    </text>
  </g>
  <rect
    fill="#c0392b"
    height="3"
    rx="1.5"
    width="160"
    x="20"
    y="306"
  />
</svg>
`;

exports[`ArcanumCard — snapshot per card > snapshot of arcanum 5 (The Hierophant) 1`] = `
<svg
  aria-label="Arcanum 5, The Hierophant — Hebrew letter Vav, attribution Taurus"
  data-arcanum="5"
  role="figure"
  viewBox="0 0 200 320"
  xmlns="http://www.w3.org/2000/svg"
>
  <title>
    Arcanum 5, The Hierophant — Hebrew letter Vav, attribution Taurus
  </title>
  <defs>
    <lineargradient
      id="arcanum-bg-:r6k:"
      x1="0"
      x2="0"
      y1="0"
      y2="1"
    >
      <stop
        offset="0%"
        stop-color="#1a1542"
      />
      <stop
        offset="100%"
        stop-color="#0e0a1f"
      />
    </lineargradient>
    <filter
      color-interpolation-filters="sRGB"
      height="1"
      id="arcanum-filt-:r6l:"
      width="1"
      x="0"
      y="0"
    >
      <fecolormatrix
        result="desat"
        type="saturate"
        values="0.2"
      />
      <fecomponenttransfer
        in="desat"
      >
        <fefuncr
          slope="0.5"
          type="linear"
        />
        <fefuncg
          slope="0.48"
          type="linear"
        />
        <fefuncb
          slope="0.62"
          type="linear"
        />
      </fecomponenttransfer>
    </filter>
    <clippath
      id="arcanum-clip-:r6m:"
    >
      <rect
        height="142"
        width="180"
        x="10"
        y="88"
      />
    </clippath>
    <radialgradient
      cx="50%"
      cy="50%"
      id="arcanum-glow-:r6n:"
      r="50%"
    >
      <stop
        offset="0%"
        stop-color="#3a8f4a"
        stop-opacity="0.22"
      />
      <stop
        offset="100%"
        stop-color="#3a8f4a"
        stop-opacity="0"
      />
    </radialgradient>
  </defs>
  <rect
    fill="url(#arcanum-bg-:r6k:)"
    height="318"
    rx="10"
    ry="10"
    stroke="#3a8f4a"
    stroke-opacity="0.7"
    stroke-width="1.5"
    width="198"
    x="1"
    y="1"
  />
  <g
    data-zone="letter"
  >
    <ellipse
      cx="100"
      cy="48"
      fill="url(#arcanum-glow-:r6n:)"
      rx="56"
      ry="44"
    />
    <text
      fill="#f8f8ff"
      font-family="var(--font-hebrew), serif"
      font-size="64"
      lang="he"
      style="direction: rtl; unicode-bidi: isolate;"
      text-anchor="middle"
      x="100"
      y="70"
    >
      ו
    </text>
  </g>
  <line
    stroke="#3a8f4a"
    stroke-opacity="0.4"
    stroke-width="0.8"
    x1="20"
    x2="180"
    y1="88"
    y2="88"
  />
  <image
    clip-path="url(#arcanum-clip-:r6m:)"
    filter="url(#arcanum-filt-:r6l:)"
    height="313"
    href="/rider-waite-cards/TheHeirophant.jpg"
    preserveAspectRatio="xMidYMin slice"
    width="180"
    x="10"
    y="78"
  />
  <rect
    clip-path="url(#arcanum-clip-:r6m:)"
    fill="#3a8f4a"
    fill-opacity="0.12"
    height="142"
    style="mix-blend-mode: screen;"
    width="180"
    x="10"
    y="88"
  />
  <line
    stroke="#3a8f4a"
    stroke-opacity="0.4"
    stroke-width="0.8"
    x1="20"
    x2="180"
    y1="230"
    y2="230"
  />
  <g
    data-zone="footer"
  >
    <text
      fill="#f8f8ff"
      font-family="var(--font-display), serif"
      font-size="15"
      letter-spacing="1.5"
      style="text-transform: uppercase;"
      text-anchor="middle"
      x="100"
      y="262"
    >
      The Hierophant
    </text>
    <text
      fill="#f8f8ff"
      fill-opacity="0.5"
      font-family="var(--font-sans), sans-serif"
      font-size="9"
      letter-spacing="1.5"
      style="text-transform: uppercase;"
      text-anchor="middle"
      x="100"
      y="284"
    >
      Taurus
    </text>
  </g>
  <rect
    fill="#3a8f4a"
    height="3"
    rx="1.5"
    width="160"
    x="20"
    y="306"
  />
</svg>
`;

exports[`ArcanumCard — snapshot per card > snapshot of arcanum 6 (The Lovers) 1`] = `
<svg
  aria-label="Arcanum 6, The Lovers — Hebrew letter Zayin, attribution Gemini"
  data-arcanum="6"
  role="figure"
  viewBox="0 0 200 320"
  xmlns="http://www.w3.org/2000/svg"
>
  <title>
    Arcanum 6, The Lovers — Hebrew letter Zayin, attribution Gemini
  </title>
  <defs>
    <lineargradient
      id="arcanum-bg-:r6o:"
      x1="0"
      x2="0"
      y1="0"
      y2="1"
    >
      <stop
        offset="0%"
        stop-color="#1a1542"
      />
      <stop
        offset="100%"
        stop-color="#0e0a1f"
      />
    </lineargradient>
    <filter
      color-interpolation-filters="sRGB"
      height="1"
      id="arcanum-filt-:r6p:"
      width="1"
      x="0"
      y="0"
    >
      <fecolormatrix
        result="desat"
        type="saturate"
        values="0.2"
      />
      <fecomponenttransfer
        in="desat"
      >
        <fefuncr
          slope="0.5"
          type="linear"
        />
        <fefuncg
          slope="0.48"
          type="linear"
        />
        <fefuncb
          slope="0.62"
          type="linear"
        />
      </fecomponenttransfer>
    </filter>
    <clippath
      id="arcanum-clip-:r6q:"
    >
      <rect
        height="142"
        width="180"
        x="10"
        y="88"
      />
    </clippath>
    <radialgradient
      cx="50%"
      cy="50%"
      id="arcanum-glow-:r6r:"
      r="50%"
    >
      <stop
        offset="0%"
        stop-color="#d4af37"
        stop-opacity="0.22"
      />
      <stop
        offset="100%"
        stop-color="#d4af37"
        stop-opacity="0"
      />
    </radialgradient>
  </defs>
  <rect
    fill="url(#arcanum-bg-:r6o:)"
    height="318"
    rx="10"
    ry="10"
    stroke="#d4af37"
    stroke-opacity="0.7"
    stroke-width="1.5"
    width="198"
    x="1"
    y="1"
  />
  <g
    data-zone="letter"
  >
    <ellipse
      cx="100"
      cy="48"
      fill="url(#arcanum-glow-:r6r:)"
      rx="56"
      ry="44"
    />
    <text
      fill="#f8f8ff"
      font-family="var(--font-hebrew), serif"
      font-size="64"
      lang="he"
      style="direction: rtl; unicode-bidi: isolate;"
      text-anchor="middle"
      x="100"
      y="70"
    >
      ז
    </text>
  </g>
  <line
    stroke="#d4af37"
    stroke-opacity="0.4"
    stroke-width="0.8"
    x1="20"
    x2="180"
    y1="88"
    y2="88"
  />
  <image
    clip-path="url(#arcanum-clip-:r6q:)"
    filter="url(#arcanum-filt-:r6p:)"
    height="313"
    href="/rider-waite-cards/TheLovers.jpg"
    preserveAspectRatio="xMidYMin slice"
    width="180"
    x="10"
    y="78"
  />
  <rect
    clip-path="url(#arcanum-clip-:r6q:)"
    fill="#d4af37"
    fill-opacity="0.12"
    height="142"
    style="mix-blend-mode: screen;"
    width="180"
    x="10"
    y="88"
  />
  <line
    stroke="#d4af37"
    stroke-opacity="0.4"
    stroke-width="0.8"
    x1="20"
    x2="180"
    y1="230"
    y2="230"
  />
  <g
    data-zone="footer"
  >
    <text
      fill="#f8f8ff"
      font-family="var(--font-display), serif"
      font-size="15"
      letter-spacing="1.5"
      style="text-transform: uppercase;"
      text-anchor="middle"
      x="100"
      y="262"
    >
      The Lovers
    </text>
    <text
      fill="#f8f8ff"
      fill-opacity="0.5"
      font-family="var(--font-sans), sans-serif"
      font-size="9"
      letter-spacing="1.5"
      style="text-transform: uppercase;"
      text-anchor="middle"
      x="100"
      y="284"
    >
      Gemini
    </text>
  </g>
  <rect
    fill="#d4af37"
    height="3"
    rx="1.5"
    width="160"
    x="20"
    y="306"
  />
</svg>
`;

exports[`ArcanumCard — snapshot per card > snapshot of arcanum 7 (The Chariot) 1`] = `
<svg
  aria-label="Arcanum 7, The Chariot — Hebrew letter Cheth, attribution Cancer"
  data-arcanum="7"
  role="figure"
  viewBox="0 0 200 320"
  xmlns="http://www.w3.org/2000/svg"
>
  <title>
    Arcanum 7, The Chariot — Hebrew letter Cheth, attribution Cancer
  </title>
  <defs>
    <lineargradient
      id="arcanum-bg-:r6s:"
      x1="0"
      x2="0"
      y1="0"
      y2="1"
    >
      <stop
        offset="0%"
        stop-color="#1a1542"
      />
      <stop
        offset="100%"
        stop-color="#0e0a1f"
      />
    </lineargradient>
    <filter
      color-interpolation-filters="sRGB"
      height="1"
      id="arcanum-filt-:r6t:"
      width="1"
      x="0"
      y="0"
    >
      <fecolormatrix
        result="desat"
        type="saturate"
        values="0.2"
      />
      <fecomponenttransfer
        in="desat"
      >
        <fefuncr
          slope="0.5"
          type="linear"
        />
        <fefuncg
          slope="0.48"
          type="linear"
        />
        <fefuncb
          slope="0.62"
          type="linear"
        />
      </fecomponenttransfer>
    </filter>
    <clippath
      id="arcanum-clip-:r6u:"
    >
      <rect
        height="142"
        width="180"
        x="10"
        y="88"
      />
    </clippath>
    <radialgradient
      cx="50%"
      cy="50%"
      id="arcanum-glow-:r6v:"
      r="50%"
    >
      <stop
        offset="0%"
        stop-color="#7fa6c2"
        stop-opacity="0.22"
      />
      <stop
        offset="100%"
        stop-color="#7fa6c2"
        stop-opacity="0"
      />
    </radialgradient>
  </defs>
  <rect
    fill="url(#arcanum-bg-:r6s:)"
    height="318"
    rx="10"
    ry="10"
    stroke="#7fa6c2"
    stroke-opacity="0.7"
    stroke-width="1.5"
    width="198"
    x="1"
    y="1"
  />
  <g
    data-zone="letter"
  >
    <ellipse
      cx="100"
      cy="48"
      fill="url(#arcanum-glow-:r6v:)"
      rx="56"
      ry="44"
    />
    <text
      fill="#f8f8ff"
      font-family="var(--font-hebrew), serif"
      font-size="64"
      lang="he"
      style="direction: rtl; unicode-bidi: isolate;"
      text-anchor="middle"
      x="100"
      y="70"
    >
      ח
    </text>
  </g>
  <line
    stroke="#7fa6c2"
    stroke-opacity="0.4"
    stroke-width="0.8"
    x1="20"
    x2="180"
    y1="88"
    y2="88"
  />
  <image
    clip-path="url(#arcanum-clip-:r6u:)"
    filter="url(#arcanum-filt-:r6t:)"
    height="313"
    href="/rider-waite-cards/TheChariot.jpg"
    preserveAspectRatio="xMidYMin slice"
    width="180"
    x="10"
    y="78"
  />
  <rect
    clip-path="url(#arcanum-clip-:r6u:)"
    fill="#7fa6c2"
    fill-opacity="0.12"
    height="142"
    style="mix-blend-mode: screen;"
    width="180"
    x="10"
    y="88"
  />
  <line
    stroke="#7fa6c2"
    stroke-opacity="0.4"
    stroke-width="0.8"
    x1="20"
    x2="180"
    y1="230"
    y2="230"
  />
  <g
    data-zone="footer"
  >
    <text
      fill="#f8f8ff"
      font-family="var(--font-display), serif"
      font-size="15"
      letter-spacing="1.5"
      style="text-transform: uppercase;"
      text-anchor="middle"
      x="100"
      y="262"
    >
      The Chariot
    </text>
    <text
      fill="#f8f8ff"
      fill-opacity="0.5"
      font-family="var(--font-sans), sans-serif"
      font-size="9"
      letter-spacing="1.5"
      style="text-transform: uppercase;"
      text-anchor="middle"
      x="100"
      y="284"
    >
      Cancer
    </text>
  </g>
  <rect
    fill="#7fa6c2"
    height="3"
    rx="1.5"
    width="160"
    x="20"
    y="306"
  />
</svg>
`;

exports[`ArcanumCard — snapshot per card > snapshot of arcanum 8 (Strength) 1`] = `
<svg
  aria-label="Arcanum 8, Strength — Hebrew letter Teth, attribution Leo"
  data-arcanum="8"
  role="figure"
  viewBox="0 0 200 320"
  xmlns="http://www.w3.org/2000/svg"
>
  <title>
    Arcanum 8, Strength — Hebrew letter Teth, attribution Leo
  </title>
  <defs>
    <lineargradient
      id="arcanum-bg-:r70:"
      x1="0"
      x2="0"
      y1="0"
      y2="1"
    >
      <stop
        offset="0%"
        stop-color="#1a1542"
      />
      <stop
        offset="100%"
        stop-color="#0e0a1f"
      />
    </lineargradient>
    <filter
      color-interpolation-filters="sRGB"
      height="1"
      id="arcanum-filt-:r71:"
      width="1"
      x="0"
      y="0"
    >
      <fecolormatrix
        result="desat"
        type="saturate"
        values="0.2"
      />
      <fecomponenttransfer
        in="desat"
      >
        <fefuncr
          slope="0.5"
          type="linear"
        />
        <fefuncg
          slope="0.48"
          type="linear"
        />
        <fefuncb
          slope="0.62"
          type="linear"
        />
      </fecomponenttransfer>
    </filter>
    <clippath
      id="arcanum-clip-:r72:"
    >
      <rect
        height="142"
        width="180"
        x="10"
        y="88"
      />
    </clippath>
    <radialgradient
      cx="50%"
      cy="50%"
      id="arcanum-glow-:r73:"
      r="50%"
    >
      <stop
        offset="0%"
        stop-color="#e07b00"
        stop-opacity="0.22"
      />
      <stop
        offset="100%"
        stop-color="#e07b00"
        stop-opacity="0"
      />
    </radialgradient>
  </defs>
  <rect
    fill="url(#arcanum-bg-:r70:)"
    height="318"
    rx="10"
    ry="10"
    stroke="#e07b00"
    stroke-opacity="0.7"
    stroke-width="1.5"
    width="198"
    x="1"
    y="1"
  />
  <g
    data-zone="letter"
  >
    <ellipse
      cx="100"
      cy="48"
      fill="url(#arcanum-glow-:r73:)"
      rx="56"
      ry="44"
    />
    <text
      fill="#f8f8ff"
      font-family="var(--font-hebrew), serif"
      font-size="64"
      lang="he"
      style="direction: rtl; unicode-bidi: isolate;"
      text-anchor="middle"
      x="100"
      y="70"
    >
      ט
    </text>
  </g>
  <line
    stroke="#e07b00"
    stroke-opacity="0.4"
    stroke-width="0.8"
    x1="20"
    x2="180"
    y1="88"
    y2="88"
  />
  <image
    clip-path="url(#arcanum-clip-:r72:)"
    filter="url(#arcanum-filt-:r71:)"
    height="313"
    href="/rider-waite-cards/Strength.jpg"
    preserveAspectRatio="xMidYMin slice"
    width="180"
    x="10"
    y="78"
  />
  <rect
    clip-path="url(#arcanum-clip-:r72:)"
    fill="#e07b00"
    fill-opacity="0.12"
    height="142"
    style="mix-blend-mode: screen;"
    width="180"
    x="10"
    y="88"
  />
  <line
    stroke="#e07b00"
    stroke-opacity="0.4"
    stroke-width="0.8"
    x1="20"
    x2="180"
    y1="230"
    y2="230"
  />
  <g
    data-zone="footer"
  >
    <text
      fill="#f8f8ff"
      font-family="var(--font-display), serif"
      font-size="15"
      letter-spacing="1.5"
      style="text-transform: uppercase;"
      text-anchor="middle"
      x="100"
      y="262"
    >
      Strength
    </text>
    <text
      fill="#f8f8ff"
      fill-opacity="0.5"
      font-family="var(--font-sans), sans-serif"
      font-size="9"
      letter-spacing="1.5"
      style="text-transform: uppercase;"
      text-anchor="middle"
      x="100"
      y="284"
    >
      Leo
    </text>
  </g>
  <rect
    fill="#e07b00"
    height="3"
    rx="1.5"
    width="160"
    x="20"
    y="306"
  />
</svg>
`;

exports[`ArcanumCard — snapshot per card > snapshot of arcanum 9 (The Hermit) 1`] = `
<svg
  aria-label="Arcanum 9, The Hermit — Hebrew letter Yod, attribution Virgo"
  data-arcanum="9"
  role="figure"
  viewBox="0 0 200 320"
  xmlns="http://www.w3.org/2000/svg"
>
  <title>
    Arcanum 9, The Hermit — Hebrew letter Yod, attribution Virgo
  </title>
  <defs>
    <lineargradient
      id="arcanum-bg-:r74:"
      x1="0"
      x2="0"
      y1="0"
      y2="1"
    >
      <stop
        offset="0%"
        stop-color="#1a1542"
      />
      <stop
        offset="100%"
        stop-color="#0e0a1f"
      />
    </lineargradient>
    <filter
      color-interpolation-filters="sRGB"
      height="1"
      id="arcanum-filt-:r75:"
      width="1"
      x="0"
      y="0"
    >
      <fecolormatrix
        result="desat"
        type="saturate"
        values="0.2"
      />
      <fecomponenttransfer
        in="desat"
      >
        <fefuncr
          slope="0.5"
          type="linear"
        />
        <fefuncg
          slope="0.48"
          type="linear"
        />
        <fefuncb
          slope="0.62"
          type="linear"
        />
      </fecomponenttransfer>
    </filter>
    <clippath
      id="arcanum-clip-:r76:"
    >
      <rect
        height="142"
        width="180"
        x="10"
        y="88"
      />
    </clippath>
    <radialgradient
      cx="50%"
      cy="50%"
      id="arcanum-glow-:r77:"
      r="50%"
    >
      <stop
        offset="0%"
        stop-color="#7a8c5c"
        stop-opacity="0.22"
      />
      <stop
        offset="100%"
        stop-color="#7a8c5c"
        stop-opacity="0"
      />
    </radialgradient>
  </defs>
  <rect
    fill="url(#arcanum-bg-:r74:)"
    height="318"
    rx="10"
    ry="10"
    stroke="#7a8c5c"
    stroke-opacity="0.7"
    stroke-width="1.5"
    width="198"
    x="1"
    y="1"
  />
  <g
    data-zone="letter"
  >
    <ellipse
      cx="100"
      cy="48"
      fill="url(#arcanum-glow-:r77:)"
      rx="56"
      ry="44"
    />
    <text
      fill="#f8f8ff"
      font-family="var(--font-hebrew), serif"
      font-size="64"
      lang="he"
      style="direction: rtl; unicode-bidi: isolate;"
      text-anchor="middle"
      x="100"
      y="70"
    >
      י
    </text>
  </g>
  <line
    stroke="#7a8c5c"
    stroke-opacity="0.4"
    stroke-width="0.8"
    x1="20"
    x2="180"
    y1="88"
    y2="88"
  />
  <image
    clip-path="url(#arcanum-clip-:r76:)"
    filter="url(#arcanum-filt-:r75:)"
    height="313"
    href="/rider-waite-cards/TheHermit.jpg"
    preserveAspectRatio="xMidYMin slice"
    width="180"
    x="10"
    y="78"
  />
  <rect
    clip-path="url(#arcanum-clip-:r76:)"
    fill="#7a8c5c"
    fill-opacity="0.12"
    height="142"
    style="mix-blend-mode: screen;"
    width="180"
    x="10"
    y="88"
  />
  <line
    stroke="#7a8c5c"
    stroke-opacity="0.4"
    stroke-width="0.8"
    x1="20"
    x2="180"
    y1="230"
    y2="230"
  />
  <g
    data-zone="footer"
  >
    <text
      fill="#f8f8ff"
      font-family="var(--font-display), serif"
      font-size="15"
      letter-spacing="1.5"
      style="text-transform: uppercase;"
      text-anchor="middle"
      x="100"
      y="262"
    >
      The Hermit
    </text>
    <text
      fill="#f8f8ff"
      fill-opacity="0.5"
      font-family="var(--font-sans), sans-serif"
      font-size="9"
      letter-spacing="1.5"
      style="text-transform: uppercase;"
      text-anchor="middle"
      x="100"
      y="284"
    >
      Virgo
    </text>
  </g>
  <rect
    fill="#7a8c5c"
    height="3"
    rx="1.5"
    width="160"
    x="20"
    y="306"
  />
</svg>
`;

exports[`ArcanumCard — snapshot per card > snapshot of arcanum 10 (Wheel of Fortune) 1`] = `
<svg
  aria-label="Arcanum 10, Wheel of Fortune — Hebrew letter Kaph, attribution Jupiter"
  data-arcanum="10"
  role="figure"
  viewBox="0 0 200 320"
  xmlns="http://www.w3.org/2000/svg"
>
  <title>
    Arcanum 10, Wheel of Fortune — Hebrew letter Kaph, attribution Jupiter
  </title>
  <defs>
    <lineargradient
      id="arcanum-bg-:r78:"
      x1="0"
      x2="0"
      y1="0"
      y2="1"
    >
      <stop
        offset="0%"
        stop-color="#1a1542"
      />
      <stop
        offset="100%"
        stop-color="#0e0a1f"
      />
    </lineargradient>
    <filter
      color-interpolation-filters="sRGB"
      height="1"
      id="arcanum-filt-:r79:"
      width="1"
      x="0"
      y="0"
    >
      <fecolormatrix
        result="desat"
        type="saturate"
        values="0.2"
      />
      <fecomponenttransfer
        in="desat"
      >
        <fefuncr
          slope="0.5"
          type="linear"
        />
        <fefuncg
          slope="0.48"
          type="linear"
        />
        <fefuncb
          slope="0.62"
          type="linear"
        />
      </fecomponenttransfer>
    </filter>
    <clippath
      id="arcanum-clip-:r7a:"
    >
      <rect
        height="142"
        width="180"
        x="10"
        y="88"
      />
    </clippath>
    <radialgradient
      cx="50%"
      cy="50%"
      id="arcanum-glow-:r7b:"
      r="50%"
    >
      <stop
        offset="0%"
        stop-color="#4169e1"
        stop-opacity="0.22"
      />
      <stop
        offset="100%"
        stop-color="#4169e1"
        stop-opacity="0"
      />
    </radialgradient>
  </defs>
  <rect
    fill="url(#arcanum-bg-:r78:)"
    height="318"
    rx="10"
    ry="10"
    stroke="#4169e1"
    stroke-opacity="0.7"
    stroke-width="1.5"
    width="198"
    x="1"
    y="1"
  />
  <g
    data-zone="letter"
  >
    <ellipse
      cx="100"
      cy="48"
      fill="url(#arcanum-glow-:r7b:)"
      rx="56"
      ry="44"
    />
    <text
      fill="#f8f8ff"
      font-family="var(--font-hebrew), serif"
      font-size="64"
      lang="he"
      style="direction: rtl; unicode-bidi: isolate;"
      text-anchor="middle"
      x="100"
      y="70"
    >
      כ
    </text>
  </g>
  <line
    stroke="#4169e1"
    stroke-opacity="0.4"
    stroke-width="0.8"
    x1="20"
    x2="180"
    y1="88"
    y2="88"
  />
  <image
    clip-path="url(#arcanum-clip-:r7a:)"
    filter="url(#arcanum-filt-:r79:)"
    height="313"
    href="/rider-waite-cards/WheelOfFortune.jpg"
    preserveAspectRatio="xMidYMin slice"
    width="180"
    x="10"
    y="78"
  />
  <rect
    clip-path="url(#arcanum-clip-:r7a:)"
    fill="#4169e1"
    fill-opacity="0.12"
    height="142"
    style="mix-blend-mode: screen;"
    width="180"
    x="10"
    y="88"
  />
  <line
    stroke="#4169e1"
    stroke-opacity="0.4"
    stroke-width="0.8"
    x1="20"
    x2="180"
    y1="230"
    y2="230"
  />
  <g
    data-zone="footer"
  >
    <text
      fill="#f8f8ff"
      font-family="var(--font-display), serif"
      font-size="15"
      letter-spacing="1.5"
      style="text-transform: uppercase;"
      text-anchor="middle"
      x="100"
      y="262"
    >
      Wheel of Fortune
    </text>
    <text
      fill="#f8f8ff"
      fill-opacity="0.5"
      font-family="var(--font-sans), sans-serif"
      font-size="9"
      letter-spacing="1.5"
      style="text-transform: uppercase;"
      text-anchor="middle"
      x="100"
      y="284"
    >
      Jupiter
    </text>
  </g>
  <rect
    fill="#4169e1"
    height="3"
    rx="1.5"
    width="160"
    x="20"
    y="306"
  />
</svg>
`;

exports[`ArcanumCard — snapshot per card > snapshot of arcanum 11 (Justice) 1`] = `
<svg
  aria-label="Arcanum 11, Justice — Hebrew letter Lamed, attribution Libra"
  data-arcanum="11"
  role="figure"
  viewBox="0 0 200 320"
  xmlns="http://www.w3.org/2000/svg"
>
  <title>
    Arcanum 11, Justice — Hebrew letter Lamed, attribution Libra
  </title>
  <defs>
    <lineargradient
      id="arcanum-bg-:r7c:"
      x1="0"
      x2="0"
      y1="0"
      y2="1"
    >
      <stop
        offset="0%"
        stop-color="#1a1542"
      />
      <stop
        offset="100%"
        stop-color="#0e0a1f"
      />
    </lineargradient>
    <filter
      color-interpolation-filters="sRGB"
      height="1"
      id="arcanum-filt-:r7d:"
      width="1"
      x="0"
      y="0"
    >
      <fecolormatrix
        result="desat"
        type="saturate"
        values="0.2"
      />
      <fecomponenttransfer
        in="desat"
      >
        <fefuncr
          slope="0.5"
          type="linear"
        />
        <fefuncg
          slope="0.48"
          type="linear"
        />
        <fefuncb
          slope="0.62"
          type="linear"
        />
      </fecomponenttransfer>
    </filter>
    <clippath
      id="arcanum-clip-:r7e:"
    >
      <rect
        height="142"
        width="180"
        x="10"
        y="88"
      />
    </clippath>
    <radialgradient
      cx="50%"
      cy="50%"
      id="arcanum-glow-:r7f:"
      r="50%"
    >
      <stop
        offset="0%"
        stop-color="#b8a3c2"
        stop-opacity="0.22"
      />
      <stop
        offset="100%"
        stop-color="#b8a3c2"
        stop-opacity="0"
      />
    </radialgradient>
  </defs>
  <rect
    fill="url(#arcanum-bg-:r7c:)"
    height="318"
    rx="10"
    ry="10"
    stroke="#b8a3c2"
    stroke-opacity="0.7"
    stroke-width="1.5"
    width="198"
    x="1"
    y="1"
  />
  <g
    data-zone="letter"
  >
    <ellipse
      cx="100"
      cy="48"
      fill="url(#arcanum-glow-:r7f:)"
      rx="56"
      ry="44"
    />
    <text
      fill="#f8f8ff"
      font-family="var(--font-hebrew), serif"
      font-size="64"
      lang="he"
      style="direction: rtl; unicode-bidi: isolate;"
      text-anchor="middle"
      x="100"
      y="70"
    >
      ל
    </text>
  </g>
  <line
    stroke="#b8a3c2"
    stroke-opacity="0.4"
    stroke-width="0.8"
    x1="20"
    x2="180"
    y1="88"
    y2="88"
  />
  <image
    clip-path="url(#arcanum-clip-:r7e:)"
    filter="url(#arcanum-filt-:r7d:)"
    height="313"
    href="/rider-waite-cards/Justice.jpg"
    preserveAspectRatio="xMidYMin slice"
    width="180"
    x="10"
    y="78"
  />
  <rect
    clip-path="url(#arcanum-clip-:r7e:)"
    fill="#b8a3c2"
    fill-opacity="0.12"
    height="142"
    style="mix-blend-mode: screen;"
    width="180"
    x="10"
    y="88"
  />
  <line
    stroke="#b8a3c2"
    stroke-opacity="0.4"
    stroke-width="0.8"
    x1="20"
    x2="180"
    y1="230"
    y2="230"
  />
  <g
    data-zone="footer"
  >
    <text
      fill="#f8f8ff"
      font-family="var(--font-display), serif"
      font-size="15"
      letter-spacing="1.5"
      style="text-transform: uppercase;"
      text-anchor="middle"
      x="100"
      y="262"
    >
      Justice
    </text>
    <text
      fill="#f8f8ff"
      fill-opacity="0.5"
      font-family="var(--font-sans), sans-serif"
      font-size="9"
      letter-spacing="1.5"
      style="text-transform: uppercase;"
      text-anchor="middle"
      x="100"
      y="284"
    >
      Libra
    </text>
  </g>
  <rect
    fill="#b8a3c2"
    height="3"
    rx="1.5"
    width="160"
    x="20"
    y="306"
  />
</svg>
`;

exports[`ArcanumCard — snapshot per card > snapshot of arcanum 12 (The Hanged Man) 1`] = `
<svg
  aria-label="Arcanum 12, The Hanged Man — Hebrew letter Mem, attribution Water"
  data-arcanum="12"
  role="figure"
  viewBox="0 0 200 320"
  xmlns="http://www.w3.org/2000/svg"
>
  <title>
    Arcanum 12, The Hanged Man — Hebrew letter Mem, attribution Water
  </title>
  <defs>
    <lineargradient
      id="arcanum-bg-:r7g:"
      x1="0"
      x2="0"
      y1="0"
      y2="1"
    >
      <stop
        offset="0%"
        stop-color="#1a1542"
      />
      <stop
        offset="100%"
        stop-color="#0e0a1f"
      />
    </lineargradient>
    <filter
      color-interpolation-filters="sRGB"
      height="1"
      id="arcanum-filt-:r7h:"
      width="1"
      x="0"
      y="0"
    >
      <fecolormatrix
        result="desat"
        type="saturate"
        values="0.2"
      />
      <fecomponenttransfer
        in="desat"
      >
        <fefuncr
          slope="0.5"
          type="linear"
        />
        <fefuncg
          slope="0.48"
          type="linear"
        />
        <fefuncb
          slope="0.62"
          type="linear"
        />
      </fecomponenttransfer>
    </filter>
    <clippath
      id="arcanum-clip-:r7i:"
    >
      <rect
        height="142"
        width="180"
        x="10"
        y="88"
      />
    </clippath>
    <radialgradient
      cx="50%"
      cy="50%"
      id="arcanum-glow-:r7j:"
      r="50%"
    >
      <stop
        offset="0%"
        stop-color="#2980b9"
        stop-opacity="0.22"
      />
      <stop
        offset="100%"
        stop-color="#2980b9"
        stop-opacity="0"
      />
    </radialgradient>
  </defs>
  <rect
    fill="url(#arcanum-bg-:r7g:)"
    height="318"
    rx="10"
    ry="10"
    stroke="#2980b9"
    stroke-opacity="0.7"
    stroke-width="1.5"
    width="198"
    x="1"
    y="1"
  />
  <g
    data-zone="letter"
  >
    <ellipse
      cx="100"
      cy="48"
      fill="url(#arcanum-glow-:r7j:)"
      rx="56"
      ry="44"
    />
    <text
      fill="#f8f8ff"
      font-family="var(--font-hebrew), serif"
      font-size="64"
      lang="he"
      style="direction: rtl; unicode-bidi: isolate;"
      text-anchor="middle"
      x="100"
      y="70"
    >
      מ
    </text>
  </g>
  <line
    stroke="#2980b9"
    stroke-opacity="0.4"
    stroke-width="0.8"
    x1="20"
    x2="180"
    y1="88"
    y2="88"
  />
  <image
    clip-path="url(#arcanum-clip-:r7i:)"
    filter="url(#arcanum-filt-:r7h:)"
    height="313"
    href="/rider-waite-cards/TheHangedMan.jpg"
    preserveAspectRatio="xMidYMin slice"
    width="180"
    x="10"
    y="78"
  />
  <rect
    clip-path="url(#arcanum-clip-:r7i:)"
    fill="#2980b9"
    fill-opacity="0.12"
    height="142"
    style="mix-blend-mode: screen;"
    width="180"
    x="10"
    y="88"
  />
  <line
    stroke="#2980b9"
    stroke-opacity="0.4"
    stroke-width="0.8"
    x1="20"
    x2="180"
    y1="230"
    y2="230"
  />
  <g
    data-zone="footer"
  >
    <text
      fill="#f8f8ff"
      font-family="var(--font-display), serif"
      font-size="15"
      letter-spacing="1.5"
      style="text-transform: uppercase;"
      text-anchor="middle"
      x="100"
      y="262"
    >
      The Hanged Man
    </text>
    <text
      fill="#f8f8ff"
      fill-opacity="0.5"
      font-family="var(--font-sans), sans-serif"
      font-size="9"
      letter-spacing="1.5"
      style="text-transform: uppercase;"
      text-anchor="middle"
      x="100"
      y="284"
    >
      Water
    </text>
  </g>
  <rect
    fill="#2980b9"
    height="3"
    rx="1.5"
    width="160"
    x="20"
    y="306"
  />
</svg>
`;

exports[`ArcanumCard — snapshot per card > snapshot of arcanum 13 (Death) 1`] = `
<svg
  aria-label="Arcanum 13, Death — Hebrew letter Nun, attribution Scorpio"
  data-arcanum="13"
  role="figure"
  viewBox="0 0 200 320"
  xmlns="http://www.w3.org/2000/svg"
>
  <title>
    Arcanum 13, Death — Hebrew letter Nun, attribution Scorpio
  </title>
  <defs>
    <lineargradient
      id="arcanum-bg-:r7k:"
      x1="0"
      x2="0"
      y1="0"
      y2="1"
    >
      <stop
        offset="0%"
        stop-color="#1a1542"
      />
      <stop
        offset="100%"
        stop-color="#0e0a1f"
      />
    </lineargradient>
    <filter
      color-interpolation-filters="sRGB"
      height="1"
      id="arcanum-filt-:r7l:"
      width="1"
      x="0"
      y="0"
    >
      <fecolormatrix
        result="desat"
        type="saturate"
        values="0.2"
      />
      <fecomponenttransfer
        in="desat"
      >
        <fefuncr
          slope="0.5"
          type="linear"
        />
        <fefuncg
          slope="0.48"
          type="linear"
        />
        <fefuncb
          slope="0.62"
          type="linear"
        />
      </fecomponenttransfer>
    </filter>
    <clippath
      id="arcanum-clip-:r7m:"
    >
      <rect
        height="142"
        width="180"
        x="10"
        y="88"
      />
    </clippath>
    <radialgradient
      cx="50%"
      cy="50%"
      id="arcanum-glow-:r7n:"
      r="50%"
    >
      <stop
        offset="0%"
        stop-color="#5e2a4a"
        stop-opacity="0.22"
      />
      <stop
        offset="100%"
        stop-color="#5e2a4a"
        stop-opacity="0"
      />
    </radialgradient>
  </defs>
  <rect
    fill="url(#arcanum-bg-:r7k:)"
    height="318"
    rx="10"
    ry="10"
    stroke="#5e2a4a"
    stroke-opacity="0.7"
    stroke-width="1.5"
    width="198"
    x="1"
    y="1"
  />
  <g
    data-zone="letter"
  >
    <ellipse
      cx="100"
      cy="48"
      fill="url(#arcanum-glow-:r7n:)"
      rx="56"
      ry="44"
    />
    <text
      fill="#f8f8ff"
      font-family="var(--font-hebrew), serif"
      font-size="64"
      lang="he"
      style="direction: rtl; unicode-bidi: isolate;"
      text-anchor="middle"
      x="100"
      y="70"
    >
      נ
    </text>
  </g>
  <line
    stroke="#5e2a4a"
    stroke-opacity="0.4"
    stroke-width="0.8"
    x1="20"
    x2="180"
    y1="88"
    y2="88"
  />
  <image
    clip-path="url(#arcanum-clip-:r7m:)"
    filter="url(#arcanum-filt-:r7l:)"
    height="313"
    href="/rider-waite-cards/Death.jpg"
    preserveAspectRatio="xMidYMin slice"
    width="180"
    x="10"
    y="78"
  />
  <rect
    clip-path="url(#arcanum-clip-:r7m:)"
    fill="#5e2a4a"
    fill-opacity="0.12"
    height="142"
    style="mix-blend-mode: screen;"
    width="180"
    x="10"
    y="88"
  />
  <line
    stroke="#5e2a4a"
    stroke-opacity="0.4"
    stroke-width="0.8"
    x1="20"
    x2="180"
    y1="230"
    y2="230"
  />
  <g
    data-zone="footer"
  >
    <text
      fill="#f8f8ff"
      font-family="var(--font-display), serif"
      font-size="15"
      letter-spacing="1.5"
      style="text-transform: uppercase;"
      text-anchor="middle"
      x="100"
      y="262"
    >
      Death
    </text>
    <text
      fill="#f8f8ff"
      fill-opacity="0.5"
      font-family="var(--font-sans), sans-serif"
      font-size="9"
      letter-spacing="1.5"
      style="text-transform: uppercase;"
      text-anchor="middle"
      x="100"
      y="284"
    >
      Scorpio
    </text>
  </g>
  <rect
    fill="#5e2a4a"
    height="3"
    rx="1.5"
    width="160"
    x="20"
    y="306"
  />
</svg>
`;

exports[`ArcanumCard — snapshot per card > snapshot of arcanum 14 (Temperance) 1`] = `
<svg
  aria-label="Arcanum 14, Temperance — Hebrew letter Samekh, attribution Sagittarius"
  data-arcanum="14"
  role="figure"
  viewBox="0 0 200 320"
  xmlns="http://www.w3.org/2000/svg"
>
  <title>
    Arcanum 14, Temperance — Hebrew letter Samekh, attribution Sagittarius
  </title>
  <defs>
    <lineargradient
      id="arcanum-bg-:r7o:"
      x1="0"
      x2="0"
      y1="0"
      y2="1"
    >
      <stop
        offset="0%"
        stop-color="#1a1542"
      />
      <stop
        offset="100%"
        stop-color="#0e0a1f"
      />
    </lineargradient>
    <filter
      color-interpolation-filters="sRGB"
      height="1"
      id="arcanum-filt-:r7p:"
      width="1"
      x="0"
      y="0"
    >
      <fecolormatrix
        result="desat"
        type="saturate"
        values="0.2"
      />
      <fecomponenttransfer
        in="desat"
      >
        <fefuncr
          slope="0.5"
          type="linear"
        />
        <fefuncg
          slope="0.48"
          type="linear"
        />
        <fefuncb
          slope="0.62"
          type="linear"
        />
      </fecomponenttransfer>
    </filter>
    <clippath
      id="arcanum-clip-:r7q:"
    >
      <rect
        height="142"
        width="180"
        x="10"
        y="88"
      />
    </clippath>
    <radialgradient
      cx="50%"
      cy="50%"
      id="arcanum-glow-:r7r:"
      r="50%"
    >
      <stop
        offset="0%"
        stop-color="#b86e2a"
        stop-opacity="0.22"
      />
      <stop
        offset="100%"
        stop-color="#b86e2a"
        stop-opacity="0"
      />
    </radialgradient>
  </defs>
  <rect
    fill="url(#arcanum-bg-:r7o:)"
    height="318"
    rx="10"
    ry="10"
    stroke="#b86e2a"
    stroke-opacity="0.7"
    stroke-width="1.5"
    width="198"
    x="1"
    y="1"
  />
  <g
    data-zone="letter"
  >
    <ellipse
      cx="100"
      cy="48"
      fill="url(#arcanum-glow-:r7r:)"
      rx="56"
      ry="44"
    />
    <text
      fill="#f8f8ff"
      font-family="var(--font-hebrew), serif"
      font-size="64"
      lang="he"
      style="direction: rtl; unicode-bidi: isolate;"
      text-anchor="middle"
      x="100"
      y="70"
    >
      ס
    </text>
  </g>
  <line
    stroke="#b86e2a"
    stroke-opacity="0.4"
    stroke-width="0.8"
    x1="20"
    x2="180"
    y1="88"
    y2="88"
  />
  <image
    clip-path="url(#arcanum-clip-:r7q:)"
    filter="url(#arcanum-filt-:r7p:)"
    height="313"
    href="/rider-waite-cards/Temperance.jpg"
    preserveAspectRatio="xMidYMin slice"
    width="180"
    x="10"
    y="78"
  />
  <rect
    clip-path="url(#arcanum-clip-:r7q:)"
    fill="#b86e2a"
    fill-opacity="0.12"
    height="142"
    style="mix-blend-mode: screen;"
    width="180"
    x="10"
    y="88"
  />
  <line
    stroke="#b86e2a"
    stroke-opacity="0.4"
    stroke-width="0.8"
    x1="20"
    x2="180"
    y1="230"
    y2="230"
  />
  <g
    data-zone="footer"
  >
    <text
      fill="#f8f8ff"
      font-family="var(--font-display), serif"
      font-size="15"
      letter-spacing="1.5"
      style="text-transform: uppercase;"
      text-anchor="middle"
      x="100"
      y="262"
    >
      Temperance
    </text>
    <text
      fill="#f8f8ff"
      fill-opacity="0.5"
      font-family="var(--font-sans), sans-serif"
      font-size="9"
      letter-spacing="1.5"
      style="text-transform: uppercase;"
      text-anchor="middle"
      x="100"
      y="284"
    >
      Sagittarius
    </text>
  </g>
  <rect
    fill="#b86e2a"
    height="3"
    rx="1.5"
    width="160"
    x="20"
    y="306"
  />
</svg>
`;

exports[`ArcanumCard — snapshot per card > snapshot of arcanum 15 (The Devil) 1`] = `
<svg
  aria-label="Arcanum 15, The Devil — Hebrew letter Ayin, attribution Capricorn"
  data-arcanum="15"
  role="figure"
  viewBox="0 0 200 320"
  xmlns="http://www.w3.org/2000/svg"
>
  <title>
    Arcanum 15, The Devil — Hebrew letter Ayin, attribution Capricorn
  </title>
  <defs>
    <lineargradient
      id="arcanum-bg-:r7s:"
      x1="0"
      x2="0"
      y1="0"
      y2="1"
    >
      <stop
        offset="0%"
        stop-color="#1a1542"
      />
      <stop
        offset="100%"
        stop-color="#0e0a1f"
      />
    </lineargradient>
    <filter
      color-interpolation-filters="sRGB"
      height="1"
      id="arcanum-filt-:r7t:"
      width="1"
      x="0"
      y="0"
    >
      <fecolormatrix
        result="desat"
        type="saturate"
        values="0.2"
      />
      <fecomponenttransfer
        in="desat"
      >
        <fefuncr
          slope="0.5"
          type="linear"
        />
        <fefuncg
          slope="0.48"
          type="linear"
        />
        <fefuncb
          slope="0.62"
          type="linear"
        />
      </fecomponenttransfer>
    </filter>
    <clippath
      id="arcanum-clip-:r7u:"
    >
      <rect
        height="142"
        width="180"
        x="10"
        y="88"
      />
    </clippath>
    <radialgradient
      cx="50%"
      cy="50%"
      id="arcanum-glow-:r7v:"
      r="50%"
    >
      <stop
        offset="0%"
        stop-color="#2a3a4a"
        stop-opacity="0.22"
      />
      <stop
        offset="100%"
        stop-color="#2a3a4a"
        stop-opacity="0"
      />
    </radialgradient>
  </defs>
  <rect
    fill="url(#arcanum-bg-:r7s:)"
    height="318"
    rx="10"
    ry="10"
    stroke="#2a3a4a"
    stroke-opacity="0.7"
    stroke-width="1.5"
    width="198"
    x="1"
    y="1"
  />
  <g
    data-zone="letter"
  >
    <ellipse
      cx="100"
      cy="48"
      fill="url(#arcanum-glow-:r7v:)"
      rx="56"
      ry="44"
    />
    <text
      fill="#f8f8ff"
      font-family="var(--font-hebrew), serif"
      font-size="64"
      lang="he"
      style="direction: rtl; unicode-bidi: isolate;"
      text-anchor="middle"
      x="100"
      y="70"
    >
      ע
    </text>
  </g>
  <line
    stroke="#2a3a4a"
    stroke-opacity="0.4"
    stroke-width="0.8"
    x1="20"
    x2="180"
    y1="88"
    y2="88"
  />
  <image
    clip-path="url(#arcanum-clip-:r7u:)"
    filter="url(#arcanum-filt-:r7t:)"
    height="313"
    href="/rider-waite-cards/TheDevil.jpg"
    preserveAspectRatio="xMidYMin slice"
    width="180"
    x="10"
    y="78"
  />
  <rect
    clip-path="url(#arcanum-clip-:r7u:)"
    fill="#2a3a4a"
    fill-opacity="0.12"
    height="142"
    style="mix-blend-mode: screen;"
    width="180"
    x="10"
    y="88"
  />
  <line
    stroke="#2a3a4a"
    stroke-opacity="0.4"
    stroke-width="0.8"
    x1="20"
    x2="180"
    y1="230"
    y2="230"
  />
  <g
    data-zone="footer"
  >
    <text
      fill="#f8f8ff"
      font-family="var(--font-display), serif"
      font-size="15"
      letter-spacing="1.5"
      style="text-transform: uppercase;"
      text-anchor="middle"
      x="100"
      y="262"
    >
      The Devil
    </text>
    <text
      fill="#f8f8ff"
      fill-opacity="0.5"
      font-family="var(--font-sans), sans-serif"
      font-size="9"
      letter-spacing="1.5"
      style="text-transform: uppercase;"
      text-anchor="middle"
      x="100"
      y="284"
    >
      Capricorn
    </text>
  </g>
  <rect
    fill="#2a3a4a"
    height="3"
    rx="1.5"
    width="160"
    x="20"
    y="306"
  />
</svg>
`;

exports[`ArcanumCard — snapshot per card > snapshot of arcanum 16 (The Tower) 1`] = `
<svg
  aria-label="Arcanum 16, The Tower — Hebrew letter Peh, attribution Mars"
  data-arcanum="16"
  role="figure"
  viewBox="0 0 200 320"
  xmlns="http://www.w3.org/2000/svg"
>
  <title>
    Arcanum 16, The Tower — Hebrew letter Peh, attribution Mars
  </title>
  <defs>
    <lineargradient
      id="arcanum-bg-:r80:"
      x1="0"
      x2="0"
      y1="0"
      y2="1"
    >
      <stop
        offset="0%"
        stop-color="#1a1542"
      />
      <stop
        offset="100%"
        stop-color="#0e0a1f"
      />
    </lineargradient>
    <filter
      color-interpolation-filters="sRGB"
      height="1"
      id="arcanum-filt-:r81:"
      width="1"
      x="0"
      y="0"
    >
      <fecolormatrix
        result="desat"
        type="saturate"
        values="0.2"
      />
      <fecomponenttransfer
        in="desat"
      >
        <fefuncr
          slope="0.5"
          type="linear"
        />
        <fefuncg
          slope="0.48"
          type="linear"
        />
        <fefuncb
          slope="0.62"
          type="linear"
        />
      </fecomponenttransfer>
    </filter>
    <clippath
      id="arcanum-clip-:r82:"
    >
      <rect
        height="142"
        width="180"
        x="10"
        y="88"
      />
    </clippath>
    <radialgradient
      cx="50%"
      cy="50%"
      id="arcanum-glow-:r83:"
      r="50%"
    >
      <stop
        offset="0%"
        stop-color="#a82323"
        stop-opacity="0.22"
      />
      <stop
        offset="100%"
        stop-color="#a82323"
        stop-opacity="0"
      />
    </radialgradient>
  </defs>
  <rect
    fill="url(#arcanum-bg-:r80:)"
    height="318"
    rx="10"
    ry="10"
    stroke="#a82323"
    stroke-opacity="0.7"
    stroke-width="1.5"
    width="198"
    x="1"
    y="1"
  />
  <g
    data-zone="letter"
  >
    <ellipse
      cx="100"
      cy="48"
      fill="url(#arcanum-glow-:r83:)"
      rx="56"
      ry="44"
    />
    <text
      fill="#f8f8ff"
      font-family="var(--font-hebrew), serif"
      font-size="64"
      lang="he"
      style="direction: rtl; unicode-bidi: isolate;"
      text-anchor="middle"
      x="100"
      y="70"
    >
      פ
    </text>
  </g>
  <line
    stroke="#a82323"
    stroke-opacity="0.4"
    stroke-width="0.8"
    x1="20"
    x2="180"
    y1="88"
    y2="88"
  />
  <image
    clip-path="url(#arcanum-clip-:r82:)"
    filter="url(#arcanum-filt-:r81:)"
    height="313"
    href="/rider-waite-cards/TheTower.jpg"
    preserveAspectRatio="xMidYMin slice"
    width="180"
    x="10"
    y="78"
  />
  <rect
    clip-path="url(#arcanum-clip-:r82:)"
    fill="#a82323"
    fill-opacity="0.12"
    height="142"
    style="mix-blend-mode: screen;"
    width="180"
    x="10"
    y="88"
  />
  <line
    stroke="#a82323"
    stroke-opacity="0.4"
    stroke-width="0.8"
    x1="20"
    x2="180"
    y1="230"
    y2="230"
  />
  <g
    data-zone="footer"
  >
    <text
      fill="#f8f8ff"
      font-family="var(--font-display), serif"
      font-size="15"
      letter-spacing="1.5"
      style="text-transform: uppercase;"
      text-anchor="middle"
      x="100"
      y="262"
    >
      The Tower
    </text>
    <text
      fill="#f8f8ff"
      fill-opacity="0.5"
      font-family="var(--font-sans), sans-serif"
      font-size="9"
      letter-spacing="1.5"
      style="text-transform: uppercase;"
      text-anchor="middle"
      x="100"
      y="284"
    >
      Mars
    </text>
  </g>
  <rect
    fill="#a82323"
    height="3"
    rx="1.5"
    width="160"
    x="20"
    y="306"
  />
</svg>
`;

exports[`ArcanumCard — snapshot per card > snapshot of arcanum 17 (The Star) 1`] = `
<svg
  aria-label="Arcanum 17, The Star — Hebrew letter Tzaddi, attribution Aquarius"
  data-arcanum="17"
  role="figure"
  viewBox="0 0 200 320"
  xmlns="http://www.w3.org/2000/svg"
>
  <title>
    Arcanum 17, The Star — Hebrew letter Tzaddi, attribution Aquarius
  </title>
  <defs>
    <lineargradient
      id="arcanum-bg-:r84:"
      x1="0"
      x2="0"
      y1="0"
      y2="1"
    >
      <stop
        offset="0%"
        stop-color="#1a1542"
      />
      <stop
        offset="100%"
        stop-color="#0e0a1f"
      />
    </lineargradient>
    <filter
      color-interpolation-filters="sRGB"
      height="1"
      id="arcanum-filt-:r85:"
      width="1"
      x="0"
      y="0"
    >
      <fecolormatrix
        result="desat"
        type="saturate"
        values="0.2"
      />
      <fecomponenttransfer
        in="desat"
      >
        <fefuncr
          slope="0.5"
          type="linear"
        />
        <fefuncg
          slope="0.48"
          type="linear"
        />
        <fefuncb
          slope="0.62"
          type="linear"
        />
      </fecomponenttransfer>
    </filter>
    <clippath
      id="arcanum-clip-:r86:"
    >
      <rect
        height="142"
        width="180"
        x="10"
        y="88"
      />
    </clippath>
    <radialgradient
      cx="50%"
      cy="50%"
      id="arcanum-glow-:r87:"
      r="50%"
    >
      <stop
        offset="0%"
        stop-color="#5fb8c2"
        stop-opacity="0.22"
      />
      <stop
        offset="100%"
        stop-color="#5fb8c2"
        stop-opacity="0"
      />
    </radialgradient>
  </defs>
  <rect
    fill="url(#arcanum-bg-:r84:)"
    height="318"
    rx="10"
    ry="10"
    stroke="#5fb8c2"
    stroke-opacity="0.7"
    stroke-width="1.5"
    width="198"
    x="1"
    y="1"
  />
  <g
    data-zone="letter"
  >
    <ellipse
      cx="100"
      cy="48"
      fill="url(#arcanum-glow-:r87:)"
      rx="56"
      ry="44"
    />
    <text
      fill="#f8f8ff"
      font-family="var(--font-hebrew), serif"
      font-size="64"
      lang="he"
      style="direction: rtl; unicode-bidi: isolate;"
      text-anchor="middle"
      x="100"
      y="70"
    >
      צ
    </text>
  </g>
  <line
    stroke="#5fb8c2"
    stroke-opacity="0.4"
    stroke-width="0.8"
    x1="20"
    x2="180"
    y1="88"
    y2="88"
  />
  <image
    clip-path="url(#arcanum-clip-:r86:)"
    filter="url(#arcanum-filt-:r85:)"
    height="313"
    href="/rider-waite-cards/TheStar.jpg"
    preserveAspectRatio="xMidYMin slice"
    width="180"
    x="10"
    y="78"
  />
  <rect
    clip-path="url(#arcanum-clip-:r86:)"
    fill="#5fb8c2"
    fill-opacity="0.12"
    height="142"
    style="mix-blend-mode: screen;"
    width="180"
    x="10"
    y="88"
  />
  <line
    stroke="#5fb8c2"
    stroke-opacity="0.4"
    stroke-width="0.8"
    x1="20"
    x2="180"
    y1="230"
    y2="230"
  />
  <g
    data-zone="footer"
  >
    <text
      fill="#f8f8ff"
      font-family="var(--font-display), serif"
      font-size="15"
      letter-spacing="1.5"
      style="text-transform: uppercase;"
      text-anchor="middle"
      x="100"
      y="262"
    >
      The Star
    </text>
    <text
      fill="#f8f8ff"
      fill-opacity="0.5"
      font-family="var(--font-sans), sans-serif"
      font-size="9"
      letter-spacing="1.5"
      style="text-transform: uppercase;"
      text-anchor="middle"
      x="100"
      y="284"
    >
      Aquarius
    </text>
  </g>
  <rect
    fill="#5fb8c2"
    height="3"
    rx="1.5"
    width="160"
    x="20"
    y="306"
  />
</svg>
`;

exports[`ArcanumCard — snapshot per card > snapshot of arcanum 18 (The Moon) 1`] = `
<svg
  aria-label="Arcanum 18, The Moon — Hebrew letter Qoph, attribution Pisces"
  data-arcanum="18"
  role="figure"
  viewBox="0 0 200 320"
  xmlns="http://www.w3.org/2000/svg"
>
  <title>
    Arcanum 18, The Moon — Hebrew letter Qoph, attribution Pisces
  </title>
  <defs>
    <lineargradient
      id="arcanum-bg-:r88:"
      x1="0"
      x2="0"
      y1="0"
      y2="1"
    >
      <stop
        offset="0%"
        stop-color="#1a1542"
      />
      <stop
        offset="100%"
        stop-color="#0e0a1f"
      />
    </lineargradient>
    <filter
      color-interpolation-filters="sRGB"
      height="1"
      id="arcanum-filt-:r89:"
      width="1"
      x="0"
      y="0"
    >
      <fecolormatrix
        result="desat"
        type="saturate"
        values="0.2"
      />
      <fecomponenttransfer
        in="desat"
      >
        <fefuncr
          slope="0.5"
          type="linear"
        />
        <fefuncg
          slope="0.48"
          type="linear"
        />
        <fefuncb
          slope="0.62"
          type="linear"
        />
      </fecomponenttransfer>
    </filter>
    <clippath
      id="arcanum-clip-:r8a:"
    >
      <rect
        height="142"
        width="180"
        x="10"
        y="88"
      />
    </clippath>
    <radialgradient
      cx="50%"
      cy="50%"
      id="arcanum-glow-:r8b:"
      r="50%"
    >
      <stop
        offset="0%"
        stop-color="#5c7a9c"
        stop-opacity="0.22"
      />
      <stop
        offset="100%"
        stop-color="#5c7a9c"
        stop-opacity="0"
      />
    </radialgradient>
  </defs>
  <rect
    fill="url(#arcanum-bg-:r88:)"
    height="318"
    rx="10"
    ry="10"
    stroke="#5c7a9c"
    stroke-opacity="0.7"
    stroke-width="1.5"
    width="198"
    x="1"
    y="1"
  />
  <g
    data-zone="letter"
  >
    <ellipse
      cx="100"
      cy="48"
      fill="url(#arcanum-glow-:r8b:)"
      rx="56"
      ry="44"
    />
    <text
      fill="#f8f8ff"
      font-family="var(--font-hebrew), serif"
      font-size="64"
      lang="he"
      style="direction: rtl; unicode-bidi: isolate;"
      text-anchor="middle"
      x="100"
      y="70"
    >
      ק
    </text>
  </g>
  <line
    stroke="#5c7a9c"
    stroke-opacity="0.4"
    stroke-width="0.8"
    x1="20"
    x2="180"
    y1="88"
    y2="88"
  />
  <image
    clip-path="url(#arcanum-clip-:r8a:)"
    filter="url(#arcanum-filt-:r89:)"
    height="313"
    href="/rider-waite-cards/TheMoon.jpg"
    preserveAspectRatio="xMidYMin slice"
    width="180"
    x="10"
    y="78"
  />
  <rect
    clip-path="url(#arcanum-clip-:r8a:)"
    fill="#5c7a9c"
    fill-opacity="0.12"
    height="142"
    style="mix-blend-mode: screen;"
    width="180"
    x="10"
    y="88"
  />
  <line
    stroke="#5c7a9c"
    stroke-opacity="0.4"
    stroke-width="0.8"
    x1="20"
    x2="180"
    y1="230"
    y2="230"
  />
  <g
    data-zone="footer"
  >
    <text
      fill="#f8f8ff"
      font-family="var(--font-display), serif"
      font-size="15"
      letter-spacing="1.5"
      style="text-transform: uppercase;"
      text-anchor="middle"
      x="100"
      y="262"
    >
      The Moon
    </text>
    <text
      fill="#f8f8ff"
      fill-opacity="0.5"
      font-family="var(--font-sans), sans-serif"
      font-size="9"
      letter-spacing="1.5"
      style="text-transform: uppercase;"
      text-anchor="middle"
      x="100"
      y="284"
    >
      Pisces
    </text>
  </g>
  <rect
    fill="#5c7a9c"
    height="3"
    rx="1.5"
    width="160"
    x="20"
    y="306"
  />
</svg>
`;

exports[`ArcanumCard — snapshot per card > snapshot of arcanum 19 (The Sun) 1`] = `
<svg
  aria-label="Arcanum 19, The Sun — Hebrew letter Resh, attribution Sun"
  data-arcanum="19"
  role="figure"
  viewBox="0 0 200 320"
  xmlns="http://www.w3.org/2000/svg"
>
  <title>
    Arcanum 19, The Sun — Hebrew letter Resh, attribution Sun
  </title>
  <defs>
    <lineargradient
      id="arcanum-bg-:r8c:"
      x1="0"
      x2="0"
      y1="0"
      y2="1"
    >
      <stop
        offset="0%"
        stop-color="#1a1542"
      />
      <stop
        offset="100%"
        stop-color="#0e0a1f"
      />
    </lineargradient>
    <filter
      color-interpolation-filters="sRGB"
      height="1"
      id="arcanum-filt-:r8d:"
      width="1"
      x="0"
      y="0"
    >
      <fecolormatrix
        result="desat"
        type="saturate"
        values="0.2"
      />
      <fecomponenttransfer
        in="desat"
      >
        <fefuncr
          slope="0.5"
          type="linear"
        />
        <fefuncg
          slope="0.48"
          type="linear"
        />
        <fefuncb
          slope="0.62"
          type="linear"
        />
      </fecomponenttransfer>
    </filter>
    <clippath
      id="arcanum-clip-:r8e:"
    >
      <rect
        height="142"
        width="180"
        x="10"
        y="88"
      />
    </clippath>
    <radialgradient
      cx="50%"
      cy="50%"
      id="arcanum-glow-:r8f:"
      r="50%"
    >
      <stop
        offset="0%"
        stop-color="#d4af37"
        stop-opacity="0.22"
      />
      <stop
        offset="100%"
        stop-color="#d4af37"
        stop-opacity="0"
      />
    </radialgradient>
  </defs>
  <rect
    fill="url(#arcanum-bg-:r8c:)"
    height="318"
    rx="10"
    ry="10"
    stroke="#d4af37"
    stroke-opacity="0.7"
    stroke-width="1.5"
    width="198"
    x="1"
    y="1"
  />
  <g
    data-zone="letter"
  >
    <ellipse
      cx="100"
      cy="48"
      fill="url(#arcanum-glow-:r8f:)"
      rx="56"
      ry="44"
    />
    <text
      fill="#f8f8ff"
      font-family="var(--font-hebrew), serif"
      font-size="64"
      lang="he"
      style="direction: rtl; unicode-bidi: isolate;"
      text-anchor="middle"
      x="100"
      y="70"
    >
      ר
    </text>
  </g>
  <line
    stroke="#d4af37"
    stroke-opacity="0.4"
    stroke-width="0.8"
    x1="20"
    x2="180"
    y1="88"
    y2="88"
  />
  <image
    clip-path="url(#arcanum-clip-:r8e:)"
    filter="url(#arcanum-filt-:r8d:)"
    height="313"
    href="/rider-waite-cards/TheSun.jpg"
    preserveAspectRatio="xMidYMin slice"
    width="180"
    x="10"
    y="78"
  />
  <rect
    clip-path="url(#arcanum-clip-:r8e:)"
    fill="#d4af37"
    fill-opacity="0.12"
    height="142"
    style="mix-blend-mode: screen;"
    width="180"
    x="10"
    y="88"
  />
  <line
    stroke="#d4af37"
    stroke-opacity="0.4"
    stroke-width="0.8"
    x1="20"
    x2="180"
    y1="230"
    y2="230"
  />
  <g
    data-zone="footer"
  >
    <text
      fill="#f8f8ff"
      font-family="var(--font-display), serif"
      font-size="15"
      letter-spacing="1.5"
      style="text-transform: uppercase;"
      text-anchor="middle"
      x="100"
      y="262"
    >
      The Sun
    </text>
    <text
      fill="#f8f8ff"
      fill-opacity="0.5"
      font-family="var(--font-sans), sans-serif"
      font-size="9"
      letter-spacing="1.5"
      style="text-transform: uppercase;"
      text-anchor="middle"
      x="100"
      y="284"
    >
      Sun
    </text>
  </g>
  <rect
    fill="#d4af37"
    height="3"
    rx="1.5"
    width="160"
    x="20"
    y="306"
  />
</svg>
`;

exports[`ArcanumCard — snapshot per card > snapshot of arcanum 20 (Judgement) 1`] = `
<svg
  aria-label="Arcanum 20, Judgement — Hebrew letter Shin, attribution Fire"
  data-arcanum="20"
  role="figure"
  viewBox="0 0 200 320"
  xmlns="http://www.w3.org/2000/svg"
>
  <title>
    Arcanum 20, Judgement — Hebrew letter Shin, attribution Fire
  </title>
  <defs>
    <lineargradient
      id="arcanum-bg-:r8g:"
      x1="0"
      x2="0"
      y1="0"
      y2="1"
    >
      <stop
        offset="0%"
        stop-color="#1a1542"
      />
      <stop
        offset="100%"
        stop-color="#0e0a1f"
      />
    </lineargradient>
    <filter
      color-interpolation-filters="sRGB"
      height="1"
      id="arcanum-filt-:r8h:"
      width="1"
      x="0"
      y="0"
    >
      <fecolormatrix
        result="desat"
        type="saturate"
        values="0.2"
      />
      <fecomponenttransfer
        in="desat"
      >
        <fefuncr
          slope="0.5"
          type="linear"
        />
        <fefuncg
          slope="0.48"
          type="linear"
        />
        <fefuncb
          slope="0.62"
          type="linear"
        />
      </fecomponenttransfer>
    </filter>
    <clippath
      id="arcanum-clip-:r8i:"
    >
      <rect
        height="142"
        width="180"
        x="10"
        y="88"
      />
    </clippath>
    <radialgradient
      cx="50%"
      cy="50%"
      id="arcanum-glow-:r8j:"
      r="50%"
    >
      <stop
        offset="0%"
        stop-color="#c0392b"
        stop-opacity="0.22"
      />
      <stop
        offset="100%"
        stop-color="#c0392b"
        stop-opacity="0"
      />
    </radialgradient>
  </defs>
  <rect
    fill="url(#arcanum-bg-:r8g:)"
    height="318"
    rx="10"
    ry="10"
    stroke="#c0392b"
    stroke-opacity="0.7"
    stroke-width="1.5"
    width="198"
    x="1"
    y="1"
  />
  <g
    data-zone="letter"
  >
    <ellipse
      cx="100"
      cy="48"
      fill="url(#arcanum-glow-:r8j:)"
      rx="56"
      ry="44"
    />
    <text
      fill="#f8f8ff"
      font-family="var(--font-hebrew), serif"
      font-size="64"
      lang="he"
      style="direction: rtl; unicode-bidi: isolate;"
      text-anchor="middle"
      x="100"
      y="70"
    >
      ש
    </text>
  </g>
  <line
    stroke="#c0392b"
    stroke-opacity="0.4"
    stroke-width="0.8"
    x1="20"
    x2="180"
    y1="88"
    y2="88"
  />
  <image
    clip-path="url(#arcanum-clip-:r8i:)"
    filter="url(#arcanum-filt-:r8h:)"
    height="313"
    href="/rider-waite-cards/Judgement.jpg"
    preserveAspectRatio="xMidYMin slice"
    width="180"
    x="10"
    y="78"
  />
  <rect
    clip-path="url(#arcanum-clip-:r8i:)"
    fill="#c0392b"
    fill-opacity="0.12"
    height="142"
    style="mix-blend-mode: screen;"
    width="180"
    x="10"
    y="88"
  />
  <line
    stroke="#c0392b"
    stroke-opacity="0.4"
    stroke-width="0.8"
    x1="20"
    x2="180"
    y1="230"
    y2="230"
  />
  <g
    data-zone="footer"
  >
    <text
      fill="#f8f8ff"
      font-family="var(--font-display), serif"
      font-size="15"
      letter-spacing="1.5"
      style="text-transform: uppercase;"
      text-anchor="middle"
      x="100"
      y="262"
    >
      Judgement
    </text>
    <text
      fill="#f8f8ff"
      fill-opacity="0.5"
      font-family="var(--font-sans), sans-serif"
      font-size="9"
      letter-spacing="1.5"
      style="text-transform: uppercase;"
      text-anchor="middle"
      x="100"
      y="284"
    >
      Fire
    </text>
  </g>
  <rect
    fill="#c0392b"
    height="3"
    rx="1.5"
    width="160"
    x="20"
    y="306"
  />
</svg>
`;

exports[`ArcanumCard — snapshot per card > snapshot of arcanum 21 (The World) 1`] = `
<svg
  aria-label="Arcanum 21, The World — Hebrew letter Tav, attribution Saturn"
  data-arcanum="21"
  role="figure"
  viewBox="0 0 200 320"
  xmlns="http://www.w3.org/2000/svg"
>
  <title>
    Arcanum 21, The World — Hebrew letter Tav, attribution Saturn
  </title>
  <defs>
    <lineargradient
      id="arcanum-bg-:r8k:"
      x1="0"
      x2="0"
      y1="0"
      y2="1"
    >
      <stop
        offset="0%"
        stop-color="#1a1542"
      />
      <stop
        offset="100%"
        stop-color="#0e0a1f"
      />
    </lineargradient>
    <filter
      color-interpolation-filters="sRGB"
      height="1"
      id="arcanum-filt-:r8l:"
      width="1"
      x="0"
      y="0"
    >
      <fecolormatrix
        result="desat"
        type="saturate"
        values="0.2"
      />
      <fecomponenttransfer
        in="desat"
      >
        <fefuncr
          slope="0.5"
          type="linear"
        />
        <fefuncg
          slope="0.48"
          type="linear"
        />
        <fefuncb
          slope="0.62"
          type="linear"
        />
      </fecomponenttransfer>
    </filter>
    <clippath
      id="arcanum-clip-:r8m:"
    >
      <rect
        height="142"
        width="180"
        x="10"
        y="88"
      />
    </clippath>
    <radialgradient
      cx="50%"
      cy="50%"
      id="arcanum-glow-:r8n:"
      r="50%"
    >
      <stop
        offset="0%"
        stop-color="#5c4a78"
        stop-opacity="0.22"
      />
      <stop
        offset="100%"
        stop-color="#5c4a78"
        stop-opacity="0"
      />
    </radialgradient>
  </defs>
  <rect
    fill="url(#arcanum-bg-:r8k:)"
    height="318"
    rx="10"
    ry="10"
    stroke="#5c4a78"
    stroke-opacity="0.7"
    stroke-width="1.5"
    width="198"
    x="1"
    y="1"
  />
  <g
    data-zone="letter"
  >
    <ellipse
      cx="100"
      cy="48"
      fill="url(#arcanum-glow-:r8n:)"
      rx="56"
      ry="44"
    />
    <text
      fill="#f8f8ff"
      font-family="var(--font-hebrew), serif"
      font-size="64"
      lang="he"
      style="direction: rtl; unicode-bidi: isolate;"
      text-anchor="middle"
      x="100"
      y="70"
    >
      ת
    </text>
  </g>
  <line
    stroke="#5c4a78"
    stroke-opacity="0.4"
    stroke-width="0.8"
    x1="20"
    x2="180"
    y1="88"
    y2="88"
  />
  <image
    clip-path="url(#arcanum-clip-:r8m:)"
    filter="url(#arcanum-filt-:r8l:)"
    height="313"
    href="/rider-waite-cards/TheWorld.jpg"
    preserveAspectRatio="xMidYMin slice"
    width="180"
    x="10"
    y="78"
  />
  <rect
    clip-path="url(#arcanum-clip-:r8m:)"
    fill="#5c4a78"
    fill-opacity="0.12"
    height="142"
    style="mix-blend-mode: screen;"
    width="180"
    x="10"
    y="88"
  />
  <line
    stroke="#5c4a78"
    stroke-opacity="0.4"
    stroke-width="0.8"
    x1="20"
    x2="180"
    y1="230"
    y2="230"
  />
  <g
    data-zone="footer"
  >
    <text
      fill="#f8f8ff"
      font-family="var(--font-display), serif"
      font-size="15"
      letter-spacing="1.5"
      style="text-transform: uppercase;"
      text-anchor="middle"
      x="100"
      y="262"
    >
      The World
    </text>
    <text
      fill="#f8f8ff"
      fill-opacity="0.5"
      font-family="var(--font-sans), sans-serif"
      font-size="9"
      letter-spacing="1.5"
      style="text-transform: uppercase;"
      text-anchor="middle"
      x="100"
      y="284"
    >
      Saturn
    </text>
  </g>
  <rect
    fill="#5c4a78"
    height="3"
    rx="1.5"
    width="160"
    x="20"
    y="306"
  />
</svg>
`;
